# advent-of-code-2024

./: .gitignore  README.md  advent_of_code_2024.opam  dune-project
lib/: drivers.ml  problem.ml
lib/advent_of_code/: day_01.ex  day_02.ex  day_03.ex  day_04.ex  day_05.ex  day_06.ex  day_07.ex  input.ex
lib/mix/tasks/: d01.p1.ex  d01.p2.ex  d06.p2.ex
lib/problems/: problem_2024_01.ml
